# creditaudit

./: .gitignore  02_KrocoMasStanis copy.tex  02_KrocoMasStanis.tex  CLAUDE.md  CONTEXT.md  PENJELASAN_PROJECT.md  README.md  gemastik-latex.skill  project_brief.md  project_brief_v2.md  pyproject.toml
.scratch/: BOARD.md  CONCERNS.md
data/: dataset_info.json  manifest_benchmark_acuan.md  manifest_benchmark_uji.md  manifest_split.md  manifest_train.md  manifest_train_acuan.md  manifest_train_real.md  train_unsloth.jsonl
experiments/: 02_KrocoMasStanis.tex  README-kaggle.md  _kaggle_env.py  _report.py  debug_dump.py  exp1_rq1.py  exp2_rq2.py  exp3_rq3.py  exp4_rq4.py  kaggle_rq1_rq2.ipynb  methods.py  plot_paper_figs.py  run_rq1_multi.py  run_rq2_multi.py
lora_qwen_penalaran_ts/: README.md  adapter_config.json
notebooks/: finetune_unsloth.ipynb  kaggle.ipynb
paper/: 02_KrocoMasStanis.tex  GEAR-TS_Makalah_Gemastik.docx  Makalah_Gemastik_PenalaranTimeSeries.docx  arsitektur_sistem.tex  hasilcrosseval.md  revisi_abstrak_pendahuluan.md  tambahan_referensi.md
scripts/: curate_benchmark_uji.py  fetch_wb.ps1  push_results.sh  split_dataset.py  synthesize_reasoning_acuan.py  synthesize_train.py  synthesize_train_acuan.py  synthesize_train_real.py  to_unsloth.py
tests/: test_calculator.py  test_crosscheck_independent.py  test_curate_benchmark_uji.py  test_exp3_exp4.py  test_harness.py  test_operations.py  test_qwen_vllm_adapter.py  test_rules.py  test_schema.py  test_scraper_bps.py  test_scraper_pihps.py  test_synthesize_reasoning_acuan.py  test_to_unsloth.py  (+3 more)
(+99 files in other folders)
