[project]
name = "creditaudit"
version = "0.1.0"
description = "Multimodal audit of Indonesian digital-credit offers: true-cost computation and misleading-fee detection"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
