[project]
name = "gear-ts"
version = "0.1.0"
description = "GEAR-TS: grounded, verifiable, token-efficient LLM reasoning over time series"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
